# agent-kms

./: .env.example  .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
agent_kms/: __init__.py  auto_improve.py  calibrate.py  capture.py  capture_pr.py  chunker.py  cli.py  config.py  effectiveness.py  ingest.py  llm.py  query_expand.py  refine.py  retrieve.py  server.py  session_extract.py  session_postmortem.py  sparse.py  store.py  synthetic_q.py
agent_kms/presets/cocos_unity/: kms.toml
agent_kms/presets/cocos_unity/prompts/: query_expand_llm.md  query_expand_template.md  session_extract_anti_patterns.md  session_extract_lessons.md
agent_kms/presets/general/: kms.toml
agent_kms/presets/general/prompts/: query_expand_llm.md  query_expand_template.md  session_extract_anti_patterns.md  session_extract_lessons.md
docs/: rag-primer.md  retrieval-roadmap.md
examples/: calibrate_queries.example.yaml  compose.yaml  qdrant-up.sh
scripts/hook-templates/: auto-rag-retrieve.sh  extract-session-lessons.sh
tests/: test_smoke.py
